fixed spacing in header

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -170,7 +170,7 @@ figure {
 		padding-top: $grid / 2;
 	}
 	@include respond-desktop {
-		padding-right: .75em;
+		padding-right: .5em;
 	}
 }
 
